package org.demo.summary05_20240621.code.core.mvp;

public interface View {
    String getFirstName();

    void setFirstName(String value);

    String getLastName();

    void setLastName(String value);

    String getPhone();

    void setPhone(String value);
    String getEmail();

    void setEmail(String value);


}
